Changed course title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Instructor: Jesse Wheeler" />
 
 
-<title>Math 3350 (Fall 2025) ‘Statistical Methods’</title>
+<title>Math 4450 (Fall 2025) ‘Mathematical Statistics I’</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,8 +349,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Math 3350 (Fall 2025) ‘Statistical
-Methods’</h1>
+<h1 class="title toc-ignore">Math 4450 (Fall 2025) ‘Mathematical
+Statistics I’</h1>
 <h4 class="author">Instructor: Jesse Wheeler</h4>
 
 </div>
@@ -374,9 +374,11 @@ License</a></li>
 <hr />
 <div id="course-description" class="section level2">
 <h2>Course description</h2>
-<p>A calculus-based introduction to statistical procedures, including
-simple regression, basic experimental design, and non-parametric
-methods. PREREQ: MATH 1160 or MATH 1170.</p>
+<p>The first of a two-part sequence on: Probability, random variables,
+discrete and continuous distributions, order statistics, limit theorems,
+point and interval estimation, uniformly most powerful tests, likelihood
+ratio tests, chi-square and F tests, nonparametric tests. PREREQ: MATH
+3326 and MATH 3352. Offered Odd Years in the Fall Semester.</p>
 <ul>
 <li><a href="syllabus.pdf">Course Syllabus</a></li>
 </ul>
