Added some details to website

--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@ Statistics I’</h1>
 <ul>
 <li><a href="#course-description" id="toc-course-description">Course
 description</a></li>
-<li><a href="#class-notes-and-recorded-lectures" id="toc-class-notes-and-recorded-lectures">Class notes and recorded
-lectures</a></li>
+<li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
 <li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
 participation assignments</a></li>
 <li><a href="#final-exam" id="toc-final-exam">Final Exam</a></li>
@@ -379,13 +378,19 @@ discrete and continuous distributions, order statistics, limit theorems,
 point and interval estimation, uniformly most powerful tests, likelihood
 ratio tests, chi-square and F tests, nonparametric tests. PREREQ: MATH
 3326 and MATH 3352. Offered Odd Years in the Fall Semester.</p>
+<p>For this sequence of courses, we will stick closely to Chapters 1-10
+of the third edition of ``Mathematical Statistics and Data Analysis”, by
+John A. Rice. This is a well-known textbook to use as an introduction to
+mathematical statistics at the advanced undergraduate level.</p>
+<p>Tentatively, we will plan on covering the material in Chapters 1-6 in
+Math 4450, and Chapters 7-10 in Math 4451.</p>
 <ul>
 <li><a href="syllabus.pdf">Course Syllabus</a></li>
 </ul>
 <hr />
 </div>
-<div id="class-notes-and-recorded-lectures" class="section level2">
-<h2>Class notes and recorded lectures</h2>
+<div id="class-notes" class="section level2">
+<h2>Class notes</h2>
 <ol style="list-style-type: decimal">
 <li><a href="01/index.html">Introduction</a></li>
 </ol>
