--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 <div id="class-notes" class="section level2">
 <h2>Class notes</h2>
 <ol style="list-style-type: decimal">
-<li><a href="01/index.html">Introduction</a></li>
+<li><a href="01/index.html">Chapter 1: Probability</a></li>
 </ol>
 <!--
 
