--- a/01/index.html
+++ b/01/index.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Edward L. Ionides" />
+<meta name="author" content="Jesse Wheeler" />
 
 
-<title>Modeling and Analysis of Time Series Data DATASCI/STATS 531. Chapter 1: Introduction</title>
+<title>Mathematical Statistics I Math 4450. Chapter 1: Probability</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,19 +349,15 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Modeling and Analysis of Time Series
-Data<br>DATASCI/STATS 531.<br>Chapter 1: Introduction</h1>
-<h4 class="author">Edward L. Ionides</h4>
+<h1 class="title toc-ignore">Mathematical Statistics I<br>Math
+4450.<br>Chapter 1: Probability</h1>
+<h4 class="author">Jesse Wheeler</h4>
 
 </div>
 
 
 <hr />
 <table>
-<colgroup>
-<col width="48%" />
-<col width="52%" />
-</colgroup>
 <thead>
 <tr class="header">
 <th align="left"> </th>
@@ -373,40 +369,21 @@ Data<br>DATASCI/STATS 531.<br>Chapter 1: Introduction</h1>
 <td align="left">Lecture slides</td>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
-<tr class="even">
-<td align="left">Annotated slides</td>
-<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
-</tr>
-<tr class="odd">
-<td align="left">Lecture notes</td>
-<td align="center"><a href="notes.pdf">pdf</a></td>
-</tr>
-<tr class="even">
-<td align="left">Recording: Chapter 1, Part 1</td>
-<td align="center"><a href="https://youtu.be/Zb8QPW-ldPM">(15
-mins)</a></td>
-</tr>
-<tr class="odd">
-<td align="left">Recording: Chapter 1, Part 2</td>
-<td align="center"><a href="https://youtu.be/8LvOkEgtwpU">(25
-mins)</a></td>
-</tr>
-<tr class="even">
-<td align="left">Discussion question</td>
-<td align="center"><a href="discussion.html">html</a></td>
-</tr>
 </tbody>
 </table>
-<hr />
+<!-- | Annotated slides   | [pdf](slides-annotated.pdf) | -->
+<div id="lecture-notes-pdf" class="section level2">
+<h2>| Lecture notes | <a href="notes.pdf">pdf</a> |</h2>
 <!--
 | Annotated slides | [pdf](slides-annotated.pdf) |
 -->
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
-<a href="http://github.com/ionides/531w24/tree/master/01/">Source code
+<a href="http://github.com/jeswheel/4450_f25/tree/main/01/">Source code
 for these notes</a></p>
 <hr />
+</div>
 
 
 
