Fixed 01 index page

--- a/01/index.html
+++ b/01/index.html
@@ -369,11 +369,13 @@ display: none;
 <td align="left">Lecture slides</td>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
+<tr class="even">
+<td align="left">Lecture notes</td>
+<td align="center"><a href="notes.pdf">pdf</a></td>
+</tr>
 </tbody>
 </table>
-<!-- | Annotated slides   | [pdf](slides-annotated.pdf) | -->
-<div id="lecture-notes-pdf" class="section level2">
-<h2>| Lecture notes | <a href="notes.pdf">pdf</a> |</h2>
+<hr />
 <!--
 | Annotated slides | [pdf](slides-annotated.pdf) |
 -->
@@ -383,7 +385,6 @@ display: none;
 <a href="http://github.com/jeswheel/4450_f25/tree/main/01/">Source code
 for these notes</a></p>
 <hr />
-</div>
 
 
 
