--- a/rubric_homework.html
+++ b/rubric_homework.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Instructor: Jesse Wheeler" />
 
 
-<title>Math 4450 (Fall 2025) ‘Mathematical Statistics I’</title>
+<title>Rubric for homework grades</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,157 +348,179 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Math 4450 (Fall 2025) ‘Mathematical
-Statistics I’</h1>
-<h4 class="author">Instructor: Jesse Wheeler</h4>
+<h1 class="title toc-ignore">Rubric for homework grades</h1>
+<h3 class="subtitle">Math 4450, Fall 2025</h3>
 
 </div>
 
-<div id="TOC">
-<ul>
-<li><a href="#course-description" id="toc-course-description">Course
-description</a></li>
-<li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
-<li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
-participation assignments</a></li>
-<li><a href="#final-exam" id="toc-final-exam">Final Exam</a></li>
-<li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
-License</a></li>
-</ul>
-</div>
 
 <hr />
-<div id="course-description" class="section level2">
-<h2>Course description</h2>
-<p>The first of a two-part sequence on: Probability, random variables,
-discrete and continuous distributions, order statistics, limit theorems,
-point and interval estimation, uniformly most powerful tests, likelihood
-ratio tests, chi-square and F tests, nonparametric tests. PREREQ: MATH
-3326 and MATH 3352. Offered Odd Years in the Fall Semester.</p>
-<p>For this sequence of courses, we will stick closely to Chapters 1-10
-of the third edition of ``Mathematical Statistics and Data Analysis”, by
-John A. Rice. This is a well-known textbook to use as an introduction to
-mathematical statistics at the advanced undergraduate level.</p>
-<p>Tentatively, we will plan on covering the material in Chapters 1-6 in
-Math 4450, and Chapters 7-10 in Math 4451.</p>
-<ul>
-<li><a href="syllabus.pdf">Course Syllabus</a></li>
-</ul>
+<p>Each homework report receives a numerical score for Contribution (9
+points) and Academic Integrity (1 points).</p>
+<div id="rationale" class="section level2">
+<h2>Rationale</h2>
+<p>This semester, Math 4450 permits and encourages students to take full
+advantage of all sources, including collaboration, for homework
+assignments. We follow the same principles of transparency and citation
+of sources that apply in scientific research. In extreme cases, failure
+to credit sources can amount to plagiarism.</p>
+<p>You can use as many or as few sources as you like, but you are
+responsible for making clear what sources you used for each part of your
+homework report (or being explicit if you used none). The grading scheme
+is intended to reward homework reports which demonstrate both good
+scholarship and demonstration that thought was applied beyond the
+sources used.</p>
 <hr />
 </div>
-<div id="class-notes" class="section level2">
-<h2>Class notes</h2>
+<div id="academic-integretiy-1-points" class="section level2">
+<h2>Academic Integretiy (1 points)</h2>
+<p>A <strong>source</strong> is anything or anyone you consulted
+(including classmates or office hours or any website you visited) to
+help you write or check your answers.</p>
+<p>(1 points). The homework is explicit about what sources were and were
+not used. The reader can easily tell which parts of the homework relate
+to which of the listed sources. This is usually done by citing the
+source at each point it was used, and listing the full reference at the
+beginning of of the assignment. Collaborations can also be mentioned in
+an acknowledgment section at the end of the report.</p>
+<p>(0 points). Failure to list sources explicitly, even if just to say
+that none were used. Since credit is assigned for being explicit about
+sources it is necessary also to be explicit about lack of sources.
+Otherwise, the grader cannot tell the difference between failure to list
+sources and the possibility that the work was done entirely
+independently of the notes, the internet and all colleagues.</p>
+<p>In addition, failure to list any resources / collaborations that were
+used will be considered a direct violation of ISU’s academic integrity
+policy:</p>
+<blockquote>
+<p>“The Idaho State University academic dishonesty policy allows an
+instructor to impose one of several penalties for cheating that range
+from a warning up to assigning a failing grade for the course or
+dismissal from the University.”</p>
+</blockquote>
+<div id="notes" class="section level3">
+<h3>Notes</h3>
 <ol style="list-style-type: decimal">
-<li><a href="01/index.html">Chapter 1: Probability</a></li>
+<li><p>If you choose to carry out your homework independently and then
+check it against your colleagues or internet sources, you should do the
+following: (i) explain that this was your approach; (ii) explain where
+you got to by yourself; (iii) explain what changes you made after
+consulting sources. If done well, this can be a good strategy for
+homework. <strong>If you are transparent about the extent of your own
+engagement with the problems, and that contribution is small, you may
+lose points</strong>. However, if a major discrepancy is identified
+between what you say you did and what you actually did, that is an
+academic integrity issue.</p></li>
+<li><p>A good report needs to show evidence of contributing beyond the
+sources used. It should be clear that a good homework report
+demonstrates a reasonable level of thought and effort concerning the
+topic under investigation. It is your responsibility to demonstrate to
+the reader, in a transparent and unambiguous way, evidence that you
+thought carefully about the problem at hand. The simplest way to do that
+is (i) think about the problem; (ii) write about what you thought; (iii)
+include in your writing an explanation of what you have learned from
+what others have thought and written.</p></li>
+<li><p>You are permitted to comment on sources (including previous
+solutions) in your own solutions. This is one way to show an independent
+contribution.</p></li>
+<li><p>Directly copied text must be in quotation marks. Directly copied
+equations must be explicitly referenced to the source. Adapted or
+paraphrased material take from a source should be referenced.</p></li>
+<li><p>If it becomes clear that your homework or project has benefited
+substantially from undisclosed sources, that is a serious academic
+integrity issue. Consequences can be severe. You will not necessarily
+receive any other warning, beyond this one.</p></li>
+<li><p>Scholarship points may be removed retroactively if at some later
+point it becomes clear that unattributed sources were being
+used.</p></li>
+<li><p>For your own protection, you are advised to be careful to
+acknowledge any interaction with online sources (even a brief read, if
+you subsequently edit your report). Similarly, acknowledge any
+discussion with other people which contributes to your report.</p></li>
+<li><p>If the grader has to carry out detective work to figure out which
+parts of your report come from what source, then you can expect to lose
+points. Your acknowledgement of sources should be transparent and easy
+to read. This is usually carried out by listing sources at the end of
+the homework report and citing them where relevant in the main
+text.</p></li>
 </ol>
-<!--
-
-2. [Estimating trend and autocovariance](02/index.html)
-
-3. [Stationarity, white noise, and some basic time series models](03/index.html)
-
-4. [Linear time series models and the algebra of ARMA models](04/index.html)
-
-5. [Parameter estimation and model identification for ARMA models](05/index.html)
-
-6. [Extending the ARMA model: Seasonality, integration and trend](06/index.html)
-
-7. [Introduction to time series analysis in the frequency domain](07/index.html)
-
-8. [Smoothing in the time and frequency domains](08/index.html)
-
-9. [Case study: An association between unemployment and mortality?](09/index.html)
-
-10. [Introduction to partially observed Markov process models](10/index.html)
-
--->
 <hr />
 </div>
-<div id="homework-and-participation-assignments" class="section level2">
-<h2>Homework and participation assignments</h2>
-<p>Please read the <a href="rubric_homework.html">grading rubric</a>
-before submitting homework.</p>
-<!--- 
-
-* [Homework 1](hw01/hw01.html), due Sun Jan 21, 11:59pm. 
-[Solution](hw01/sol01.html).
-
-* [Participation 1](participation/participation1.html), due Sun Jan 21, 11:59pm.
-
-
-
-* [Homework 2](hw02/hw02.html), due Tue Jan 30, 11:59pm.
-[Solution](hw02/sol02.html).
-
-* [Participation 2](participation/participation2.html), due Tue Jan 30, 11:59pm.
-
-* [Homework 3](hw03/hw03.html), due Sun Feb 11, 11:59pm.
-[Solution](hw03/sol03.html).
-
-* [Participation 3](participation/participation3.html), due Sun Feb 11, 11:59pm.
-
-* [Homework 4](hw04/hw04.html), due Sun Feb 18, 11:59pm.
-[Solution](hw04/sol04.html).
-
-* [Participation 4](participation/participation4.html), due Sun Feb 18, 11:59pm.
-
-* [Homework 5](hw05/hw05.html), due Sun Mar 17, 11:59pm.
-[Solution](hw05/sol05.html).
-
-* [Participation 5](participation/participation5.html), due Sun Mar 17, 11:59pm.
-
-
-* [Homework 6](hw06/hw06.html), due Sun Mar 24, 11:59pm. 
-[Solution](hw06/sol06.html).
-
-* [Participation 6](participation/participation6.html), due Sun Mar 24, 11:59pm.
-
-* [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-[Solution](hw07/sol07.html).
-
-
-* [Participation 7](participation/participation7.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-
-
-* [Homework 8](hw08/hw08.pdf), due Sun Apr 14, 11:59pm.
-[Solution](hw08/sol08.pdf).
-
-* [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
-
--->
-<!--
-
-* There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
-
--->
-<!---
--------------------
-
-## Midterm project
-
-* [Information](midterm_project/midterm_project_info.html).
-
-* [Midterm peer review report instructions](midterm_project/midterm_review.html)
-
-* [2024 midterm projects](midterm_project/index.html)
-
-* You are welcome to browse previous midterm projects. The [2022 midterm projects](http://ionides.github.io/531w22/midterm_project/) and  [2021 midterm projects](http://ionides.github.io/531w21/midterm_project/) have a posted summary of peer review comments. Earlier projects are also available, from [2016](http://ionides.github.io/531w16/midterm_project/), [2018](http://ionides.github.io/531w18/midterm_project/) and [2020](http://ionides.github.io/531w20/midterm_project/).
-
-
--------------
---->
 </div>
-<div id="final-exam" class="section level2">
-<h2>Final Exam</h2>
-<p>The final exam will be help in our regular classroom on Dec 18, 10:00
-a.m. – 12:00 p.m. The final exam will be comprehensive, closed book.</p>
+<div id="contribution-9-points" class="section level2">
+<h2>Contribution (9 points)</h2>
+<p>This is standard homework grading except for an additional
+requirement to demonstrate contribution of original effort beyond any
+source you use.</p>
+<p>(9 points). All solutions are correct. If checked against a source,
+the homework is explicit about how the individual solution differs from
+the source and what (if anything) was learned from the source. The
+student has found a way to show that they contributed beyond any source
+used. In particular, the two should not look too similar—by consulting a
+source, you acquire an obligation to differentiate your own work, which
+could be by adding original material relevant to the question and going
+beyond the source.</p>
+<p>Points are subtracted for each error or omission or failure to
+explain a contribution beyond the sources used.</p>
 <hr />
 </div>
-<div id="acknowledgements-and-license" class="section level2">
-<h2>Acknowledgements and License</h2>
-<p>This course and the code involved are made available with an <a href="LICENSE">MIT license</a>. Some components follow a Creative
-Commons Attribution non-commercial license. A longer list of
-acknowledgments is <a href="acknowledge.html">available</a>.</p>
+<div id="example-1-no-sources-used" class="section level2">
+<h2>Example 1: No sources used</h2>
+<p>If you did not use any sources (outside of the lecture slides and
+textbook), you should include a statement like the following in your
+homework submission:</p>
+<blockquote>
+<p>“For this homework assignment, I did not consult any outside sources
+to help me obtain my homework solutions. All responses reflect my own
+work and academic contribution.”</p>
+</blockquote>
+<hr />
+</div>
+<div id="example-2-used-outside-sources-friend-internet-or-ai" class="section level2">
+<h2>Example 2: Used outside sources (friend, internet, or AI)</h2>
+<p><strong>Remember that before using any outside sources, you are asked
+to work on each problem for at least one hour.</strong></p>
+<p>Now suppose you were working on the following problem:</p>
+<ol style="list-style-type: decimal">
+<li>Show that <span class="math inline">\(p(k) =
+\frac{\lambda^ke^{-\lambda}}{k!}, k \geq 0\)</span> is a valid
+probability mass function.</li>
+</ol>
+<p>As you’re solving this problem, you will likely run into a calculus
+problem: <span class="math display">\[
+\sum_{k = 0}^\infty p(k) = e^{-\lambda} \sum^{\infty}_{k = 0}
+\frac{\lambda^k}{k!}.
+\]</span> In this particular instance, there are a few things you could
+do to solve this problem, some are acceptable and some are unacceptable.
+For instance,</p>
+<ol style="list-style-type: decimal">
+<li><p><strong>Not acceptable</strong>: You might recognize that <span class="math inline">\(p(k)\)</span> is the pmf of a Poisson random
+variable. <strong>You cannot</strong> search (or ask AI): “how to show
+that the Poisson random variable integrates to one”, or “how to show
+that the Poisson distribution has valid pmf?”</p></li>
+<li><p><strong>Acceptable</strong>: You remember that the sum of all
+pmf’s over their support must be equal to <span class="math inline">\(1\)</span>. Hence, you deduce that <span class="math display">\[
+e^{-\lambda} \sum^{\infty}_{k = 0} \frac{\lambda^k}{k!} = 1,
+\]</span> or that <span class="math display">\[
+\sum^{\infty}_{k = 0} \frac{\lambda^k}{k!} = e^{\lambda}.
+\]</span> Fundamentally, the latter fact is a calculus problem, not
+statistics. In this case, you might search: “What is the Taylor Series
+expansion for <span class="math inline">\(e^x\)</span>?”, and then the
+response can help you solve the original problem.</p></li>
+</ol>
+<p>If you did the <strong>Acceptable</strong> option, then you should
+something similar to the following academic integrity statement in your
+homework:</p>
+<blockquote>
+<p>“I worked on problem (1) for at least one hour, but got stuck because
+I couldn’t figure out how to show the infinite sum had value <span class="math inline">\(e^{-\lambda}\)</span>. I eventually (went to
+office hours / asked a friend / searched the internet) for help, which
+reminded me about this particular expansion.”</p>
+</blockquote>
+<p>If a website was used, <strong>you also need to include a link to the
+website</strong>. If generative AI is used (e.g. ChatGPT), <strong>you
+need to include the prompt that you submitted, and the
+output</strong>.</p>
 </div>
 
 
