Removed participation html

--- a/rubric_homework.html
+++ b/rubric_homework.html
@@ -497,7 +497,9 @@ For instance,</p>
 <li><p><strong>Not acceptable</strong>: You might recognize that <span class="math inline">\(p(k)\)</span> is the pmf of a Poisson random
 variable. <strong>You cannot</strong> search (or ask AI): “how to show
 that the Poisson random variable integrates to one”, or “how to show
-that the Poisson distribution has valid pmf?”</p></li>
+that the Poisson distribution has valid pmf?”. If you do this, you may
+loose <strong>contribution</strong> points, even if you include an
+appropriate academic integrity statement.</p></li>
 <li><p><strong>Acceptable</strong>: You remember that the sum of all
 pmf’s over their support must be equal to <span class="math inline">\(1\)</span>. Hence, you deduce that <span class="math display">\[
 e^{-\lambda} \sum^{\infty}_{k = 0} \frac{\lambda^k}{k!} = 1,
