Added 'About Me' info to website and lecture 01

--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@ mathematical statistics at the advanced undergraduate level.</p>
 Math 4450, and Chapters 7-10 in Math 4451.</p>
 <ul>
 <li><a href="syllabus.pdf">Course Syllabus</a></li>
+<li><a href="Introduction.pdf">About the Instructor</a></li>
 </ul>
 <hr />
 </div>
