Added LaTeX bonus points

--- a/rubric_homework.html
+++ b/rubric_homework.html
@@ -349,7 +349,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Rubric for homework grades</h1>
-<h3 class="subtitle">Math 4450, Fall 2025</h3>
+<h3 class="subtitle"><a href="../index.html">Math 4450, Fall
+2025</a></h3>
 
 </div>
 
@@ -523,6 +524,20 @@ reminded me about this particular expansion.”</p>
 website</strong>. If generative AI is used (e.g. ChatGPT), <strong>you
 need to include the prompt that you submitted, and the
 output</strong>.</p>
+<hr />
+</div>
+<div id="bonus-points-latex-submissions" class="section level2">
+<h2>Bonus points: LaTeX submissions</h2>
+<p>I will give 0.5 bonus points on each assignment if you meet the
+following conditions:</p>
+<ol style="list-style-type: decimal">
+<li>A response to all homework questions has been given</li>
+<li>You have an appropriate Academic Integrity statement</li>
+<li>You have typed all of your responses in LaTeX</li>
+</ol>
+<p>For each homework assignment, I’ll provide a simple template that you
+can use as a starting point for your homework submission. You can use
+generative-AI to help with formatting your LaTeX responses.</p>
 </div>
 
 
