Fixed broken link

--- a/rubric_homework.html
+++ b/rubric_homework.html
@@ -349,8 +349,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Rubric for homework grades</h1>
-<h3 class="subtitle"><a href="../index.html">Math 4450, Fall
-2025</a></h3>
+<h3 class="subtitle"><a href="index.html">Math 4450, Fall 2025</a></h3>
 
 </div>
 
