--- a/index.html
+++ b/index.html
@@ -420,10 +420,11 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 <h2>Homework and participation assignments</h2>
 <p>Please read the <a href="rubric_homework.html">grading rubric</a>
 before submitting homework.</p>
+<ul>
+<li><a href="hw01/hw01.pdf">Homework 1</a>, due Wed Sep 10, 11:59pm. <a href="hw01/hw01.tex">TeX file</a></li>
+</ul>
+<!---[Solution](hw01/sol01.html). -->
 <!--- 
-
-* [Homework 1](hw01/hw01.html), due Sun Jan 21, 11:59pm. 
-[Solution](hw01/sol01.html).
 
 * [Participation 1](participation/participation1.html), due Sun Jan 21, 11:59pm.
 
