Remade landing page

--- a/index.html
+++ b/index.html
@@ -391,11 +391,10 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 <div id="class-notes" class="section level2">
 <h2>Class notes</h2>
 <ol style="list-style-type: decimal">
-<li><a href="01/index.html">Chapter 1: Probability</a></li>
+<li><p><a href="01/index.html">Chapter 1: Probability</a></p></li>
+<li><p><a href="02/index.html">Chapter 2: Random Variables</a></p></li>
 </ol>
 <!--
-
-2. [Estimating trend and autocovariance](02/index.html)
 
 3. [Stationarity, white noise, and some basic time series models](03/index.html)
 
