added some discussion problems

--- a/01/index.html
+++ b/01/index.html
@@ -376,9 +376,7 @@ display: none;
 </tbody>
 </table>
 <hr />
-<!--
-| Annotated slides | [pdf](slides-annotated.pdf) |
--->
+<div class="line-block">Discussion Problems | <a href="discussionProbs.pdf">pdf</a> |</div>
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
