Updated Chapter 1 landing page

--- a/01/index.html
+++ b/01/index.html
@@ -373,10 +373,13 @@ display: none;
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
+<tr class="odd">
+<td align="left">Discussion Problems</td>
+<td align="center"><a href="discussionProbs.pdf">pdf</a></td>
+</tr>
 </tbody>
 </table>
 <hr />
-<div class="line-block">Discussion Problems | <a href="discussionProbs.pdf">pdf</a> |</div>
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
