--- a/index.html
+++ b/index.html
@@ -423,14 +423,10 @@ before submitting homework.</p>
 <li><a href="hw01/hw01.pdf">Homework 1</a>, due Wed Sep 10, 11:59pm. <a href="hw01/hw01.tex">TeX file</a></li>
 </ul>
 <!---[Solution](hw01/sol01.html). -->
+<ul>
+<li><a href="hw02/hw02.pdf">Homework 2</a>, due Wed Sep 17, 11:59pm. <a href="hw02/hw02.tex">TeX file</a>.</li>
+</ul>
 <!--- 
-
-* [Participation 1](participation/participation1.html), due Sun Jan 21, 11:59pm.
-
-
-
-* [Homework 2](hw02/hw02.html), due Tue Jan 30, 11:59pm.
-[Solution](hw02/sol02.html).
 
 * [Participation 2](participation/participation2.html), due Tue Jan 30, 11:59pm.
 
