Added annotated slides, 09/16

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ point and interval estimation, uniformly most powerful tests, likelihood
 ratio tests, chi-square and F tests, nonparametric tests. PREREQ: MATH
 3326 and MATH 3352. Offered Odd Years in the Fall Semester.</p>
 <p>For this sequence of courses, we will stick closely to Chapters 1-10
-of the third edition of ``Mathematical Statistics and Data Analysis”, by
+of the third edition of “Mathematical Statistics and Data Analysis”, by
 John A. Rice. This is a well-known textbook to use as an introduction to
 mathematical statistics at the advanced undergraduate level.</p>
 <p>Tentatively, we will plan on covering the material in Chapters 1-6 in
