--- a/02/index.html
+++ b/02/index.html
@@ -370,6 +370,10 @@ display: none;
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slidesAnnotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
