Added in-class homework problems

--- a/index.html
+++ b/index.html
@@ -424,7 +424,8 @@ before submitting homework.</p>
 </ul>
 <!---[Solution](hw01/sol01.html). -->
 <ul>
-<li><a href="hw02/hw02.pdf">Homework 2</a>, due Wed Sep 17, 11:59pm. <a href="hw02/hw02.tex">TeX file</a>.</li>
+<li><a href="hw02/hw02.pdf">Homework 2</a>, due Wed Sep 17, 11:59pm. <a href="hw02/hw02.tex">TeX file</a>. <a href="hw02/HW2discussion.pdf">In
+class solutions</a></li>
 </ul>
 <!--- 
 
