--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ before submitting homework.</p>
 <li><p><a href="hw02/hw02.pdf">Homework 2</a>, due Wed Sep 17, 11:59pm.
 <a href="hw02/hw02.tex">TeX file</a>. <a href="hw02/HW2discussion.pdf">In class solutions</a></p></li>
 <li><p><a href="hw03/hw03.pdf">Homework 3</a>, due Wed Sep 24, 11:59pm.
-<a href="hw03/hw03.tex">TeX file</a>.</p></li>
+<a href="hw03/hw03.tex">TeX file</a>. <a href="hw03/HW3discussion.pdf">In class solutions</a>.</p></li>
 </ul>
 <!--- 
 
