Adding HW4, first draft of Chapter~3 slides

--- a/index.html
+++ b/index.html
@@ -393,10 +393,11 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 <ol style="list-style-type: decimal">
 <li><p><a href="01/index.html">Chapter 1: Probability</a></p></li>
 <li><p><a href="02/index.html">Chapter 2: Random Variables</a></p></li>
+<li><p><a href="03/index.html">Chapter 3: Joint
+Distributions</a></p></li>
 </ol>
 <!--
 
-3. [Stationarity, white noise, and some basic time series models](03/index.html)
 
 4. [Linear time series models and the algebra of ARMA models](04/index.html)
 
@@ -424,18 +425,10 @@ before submitting homework.</p>
 <a href="hw02/hw02.tex">TeX file</a>. <a href="hw02/HW2discussion.pdf">In class solutions</a></p></li>
 <li><p><a href="hw03/hw03.pdf">Homework 3</a>, due Wed Sep 24, 11:59pm.
 <a href="hw03/hw03.tex">TeX file</a>. <a href="hw03/HW3discussion.pdf">In class solutions</a>.</p></li>
+<li><p><a href="hw04/hw04.pdf">Homework 4</a>, due Wed Sep 24, 11:59pm.
+<a href="hw04/hw04.tex">TeX file</a>.</p></li>
 </ul>
 <!--- 
-
-* [Participation 2](participation/participation2.html), due Tue Jan 30, 11:59pm.
-
-* [Homework 3](hw03/hw03.html), due Sun Feb 11, 11:59pm.
-[Solution](hw03/sol03.html).
-
-* [Participation 3](participation/participation3.html), due Sun Feb 11, 11:59pm.
-
-* [Homework 4](hw04/hw04.html), due Sun Feb 18, 11:59pm.
-[Solution](hw04/sol04.html).
 
 * [Participation 4](participation/participation4.html), due Sun Feb 18, 11:59pm.
 
