Added annotated slides and HW4 discussion

--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@ before submitting homework.</p>
 <!---[Solution](hw01/sol01.html). -->
 <ul>
 <li><p><a href="hw02/hw02.pdf">Homework 2</a>, due Wed Sep 17, 11:59pm.
-<a href="hw02/hw02.tex">TeX file</a>. <a href="hw02/HW2discussion.pdf">In class solutions</a></p></li>
+<a href="hw02/hw02.tex">TeX file</a>. <a href="hw02/HW2discussion.pdf">In class discussion</a></p></li>
 <li><p><a href="hw03/hw03.pdf">Homework 3</a>, due Wed Sep 24, 11:59pm.
-<a href="hw03/hw03.tex">TeX file</a>. <a href="hw03/HW3discussion.pdf">In class solutions</a>.</p></li>
+<a href="hw03/hw03.tex">TeX file</a>. <a href="hw03/HW3discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw04/hw04.pdf">Homework 4</a>, due Wed Oct 1, 11:59pm.
-<a href="hw04/hw04.tex">TeX file</a>.</p></li>
+<a href="hw04/hw04.tex">TeX file</a>. <a href="hw04/HW4discussion.pdf">In class discussion</a>.</p></li>
 </ul>
 <!--- 
 
