--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@ before submitting homework.</p>
 <a href="hw03/hw03.tex">TeX file</a>. <a href="hw03/HW3discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw04/hw04.pdf">Homework 4</a>, due Wed Oct 1, 11:59pm.
 <a href="hw04/hw04.tex">TeX file</a>. <a href="hw04/HW4discussion.pdf">In class discussion</a>.</p></li>
+<li><p><a href="hw05/hw05.pdf">Homework 5</a>, due Fri Oct 10, 11:59pm.
+<a href="hw05/hw05.tex">TeX file</a>.</p></li>
 </ul>
 <!--- 
 
