Pushing midterm review and formula sheet

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ description</a></li>
 <li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
 <li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
 participation assignments</a></li>
+<li><a href="#midterm" id="toc-midterm">Midterm</a></li>
 <li><a href="#final-exam" id="toc-final-exam">Final Exam</a></li>
 <li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
 License</a></li>
@@ -428,7 +429,7 @@ before submitting homework.</p>
 <li><p><a href="hw04/hw04.pdf">Homework 4</a>, due Wed Oct 1, 11:59pm.
 <a href="hw04/hw04.tex">TeX file</a>. <a href="hw04/HW4discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw05/hw05.pdf">Homework 5</a>, due Fri Oct 10, 11:59pm.
-<a href="hw05/hw05.tex">TeX file</a>.</p></li>
+<a href="hw05/hw05.tex">TeX file</a>. <a href="hw05/HW5discussion.pdf">In class discussion</a>.</p></li>
 </ul>
 <!--- 
 
@@ -463,22 +464,15 @@ before submitting homework.</p>
 * There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
 
 -->
-<!---
--------------------
-
-## Midterm project
-
-* [Information](midterm_project/midterm_project_info.html).
-
-* [Midterm peer review report instructions](midterm_project/midterm_review.html)
-
-* [2024 midterm projects](midterm_project/index.html)
-
-* You are welcome to browse previous midterm projects. The [2022 midterm projects](http://ionides.github.io/531w22/midterm_project/) and  [2021 midterm projects](http://ionides.github.io/531w21/midterm_project/) have a posted summary of peer review comments. Earlier projects are also available, from [2016](http://ionides.github.io/531w16/midterm_project/), [2018](http://ionides.github.io/531w18/midterm_project/) and [2020](http://ionides.github.io/531w20/midterm_project/).
-
-
--------------
---->
+<hr />
+</div>
+<div id="midterm" class="section level2">
+<h2>Midterm</h2>
+<ul>
+<li><p><a href="midterm/MidtermReview.pdf">Review</a>.</p></li>
+<li><p><a href="midterm/formulaSheet.pdf">Formula Sheet</a></p></li>
+</ul>
+<hr />
 </div>
 <div id="final-exam" class="section level2">
 <h2>Final Exam</h2>
