Added Chapter~4 slides to website

--- a/04/index.html
+++ b/04/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jesse Wheeler" />
 
 
-<title>Mathematical Statistics I Math 4450. Chapter 1: Probability</title>
+<title>Mathematical Statistics I Math 4450. Chapter 4: Expected Values</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Mathematical Statistics I<br>Math
-4450.<br>Chapter 1: Probability</h1>
+4450.<br>Chapter 4: Expected Values</h1>
 <h4 class="author">Jesse Wheeler</h4>
 
 </div>
@@ -382,7 +382,7 @@ display: none;
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
-<a href="http://github.com/jeswheel/4450_f25/tree/main/01/">Source code
+<a href="http://github.com/jeswheel/4450_f25/tree/main/04/">Source code
 for these notes</a></p>
 <hr />
 
