--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 <li><p><a href="02/index.html">Chapter 2: Random Variables</a></p></li>
 <li><p><a href="03/index.html">Chapter 3: Joint
 Distributions</a></p></li>
+<li><p><a href="04/index.html">Chapter 4: Expected Values</a></p></li>
 </ol>
 <!--
 
 
-4. [Linear time series models and the algebra of ARMA models](04/index.html)
 
 5. [Parameter estimation and model identification for ARMA models](05/index.html)
 
