Posting first draft of annotated slides 04

--- a/04/index.html
+++ b/04/index.html
@@ -370,15 +370,16 @@ display: none;
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slidesAnnotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
 </tbody>
 </table>
 <hr />
-<!--
-| Annotated slides | [pdf](slides-annotated.pdf) |
--->
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
