--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@ before submitting homework.</p>
 <a href="hw04/hw04.tex">TeX file</a>. <a href="hw04/HW4discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw05/hw05.pdf">Homework 5</a>, due Fri Oct 10, 11:59pm.
 <a href="hw05/hw05.tex">TeX file</a>. <a href="hw05/HW5discussion.pdf">In class discussion</a>.</p></li>
+<li><p><a href="hw06/hw06.pdf">Homework 6</a>, due Wed Nov 5, 11:59pm.
+<a href="hw06/hw06.tex">TeX file</a>.</p></li>
 </ul>
 <!--- 
 
