--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@ before submitting homework.</p>
 <a href="hw05/hw05.tex">TeX file</a>. <a href="hw05/HW5discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw06/hw06.pdf">Homework 6</a>, due Wed Nov 5, 11:59pm.
 <a href="hw06/hw06.tex">TeX file</a>.</p></li>
+<li><p><a href="hw07/hw07.pdf">Homework 7</a>, due Wed Nov 12, 11:59pm.
+<a href="hw07/hw07.tex">TeX file</a>.</p></li>
 </ul>
 <!--- 
 
