--- a/05/index.html
+++ b/05/index.html
@@ -370,6 +370,10 @@ display: none;
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slidesAnnotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
@@ -377,7 +381,6 @@ display: none;
 </table>
 <hr />
 <!--
-| Annotated slides | [pdf](slides-annotated.pdf) |
 -->
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
