--- a/index.html
+++ b/index.html
@@ -398,17 +398,10 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 Distributions</a></p></li>
 <li><p><a href="04/index.html">Chapter 4: Expected Values</a></p></li>
 <li><p><a href="05/index.html">Chapter 5: Limit Theorems</a></p></li>
+<li><p><a href="06/index.html">Chapter 6: Distributions Derived from the
+Normal Distribution</a></p></li>
 </ol>
 <!--
-
-
-
-
-6. [Extending the ARMA model: Seasonality, integration and trend](06/index.html)
-
-7. [Introduction to time series analysis in the frequency domain](07/index.html)
-
-8. [Smoothing in the time and frequency domains](08/index.html)
 
 -->
 <hr />
