Added Dec 2 lecture recording

--- a/05/index.html
+++ b/05/index.html
@@ -358,6 +358,10 @@ display: none;
 
 <hr />
 <table>
+<colgroup>
+<col width="48%" />
+<col width="52%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left"> </th>
@@ -376,6 +380,11 @@ display: none;
 <tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
+</tr>
+<tr class="even">
+<td align="left">Dec 2 Lecture</td>
+<td align="center"><a href="https://isu.zoom.us/rec/play/NFh7nETDEMl27WfMCg5b4XQiTBZhAaHeLNhZgm4shBJFIm3KW9_lrDnsndifpW9j23s8wm5WZWH4K7f7.WaHJ28dWemGgOtI6">Zoom
+Recording</a></td>
 </tr>
 </tbody>
 </table>
