--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@ before submitting homework.</p>
 <a href="hw07/hw07.tex">TeX file</a>. <a href="hw07/hw7discussion.pdf">In class discussion</a>.</p></li>
 <li><p><a href="hw08/hw08.pdf">Homework 8</a>, due Fri Nov 21, 11:59pm.
 <a href="hw08/hw08.tex">TeX file</a>.</p></li>
+<li><p><a href="hw09/hw09.pdf">Homework 9</a>, due Tue Dec 9, 11:59pm <a href="hw09/hw09.tex">TeX file</a></p></li>
 </ul>
 <!--- 
 
