Added Chapter 6 annotated slides

--- a/06/index.html
+++ b/06/index.html
@@ -374,11 +374,14 @@ Distribution</h1>
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
+<tr class="odd">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slidesAnnotated.pdf">pdf</a></td>
+</tr>
 </tbody>
 </table>
 <hr />
 <!--
-| Annotated slides | [pdf](slidesAnnotated.pdf) |
 -->
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
