--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@ before submitting homework.</p>
 <li><p><a href="hw08/hw08.pdf">Homework 8</a>, due Fri Nov 21, 11:59pm.
 <a href="hw08/hw08.tex">TeX file</a>.</p></li>
 <li><p><a href="hw09/hw09.pdf">Homework 9</a>, due Tue Dec 9, 11:59pm <a href="hw09/hw09.tex">TeX file</a></p></li>
+<li><p><a href="hw10/hw10.pdf">Homework 10 (Final Exam Review)</a>, due
+Sun Dec 14, 11:59pm <a href="hw10/hw10.tex">TeX file</a></p></li>
 </ul>
 <!--- 
 
