uploaded Dec9 review session

--- a/index.html
+++ b/index.html
@@ -391,6 +391,10 @@ Math 4450, and Chapters 7-10 in Math 4451.</p>
 </div>
 <div id="class-notes" class="section level2">
 <h2>Class notes</h2>
+<ul>
+<li><a href="examReview/Dec9Review.pdf">Final Exam Review
+Session</a></li>
+</ul>
 <ol style="list-style-type: decimal">
 <li><p><a href="01/index.html">Chapter 1: Probability</a></p></li>
 <li><p><a href="02/index.html">Chapter 2: Random Variables</a></p></li>
